# Ecthelion

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  demo_ego_motion.py  demo_online_learning.py  docker-compose.yml  pyproject.toml  ruff.toml  setup.py  task_progress.md
.github/workflows/: ci.yml
docs/: conf.py
hap/: __init__.py  capacity.py  data_structures.py  encoding.py  exceptions.py  hap.py  hdc_core.py  memory.py  metrics.py  sparse_hdc.py  tension.py
tests/: __init__.py  test_capacity.py  test_data_structures.py  test_encoding.py  test_hdc_core.py  test_memory.py  test_sparse_hdc.py  test_tension.py
