[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hyperdimensional_active_perception"
version = "1.0.0"
description = "Production-grade Hyperdimensional Active Perception (HAP) framework"
readme = "README.md"
authors = [{ name = "Arthedain AI" }]
keywords = ["hyperdimensional computing", "HDC", "VSA", "neuromorphic", "event camera", "DVS", "active perception"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "matplotlib>=3.7"]
demo = ["matplotlib>=3.7"]
all = ["pytest>=7.0", "matplotlib>=3.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
